# twitter-v2-rs

./: .gitignore  Cargo.toml  README.md
examples/: oauth2_callback.rs
fixtures/data/space/: sample_space.json
fixtures/data/tweet/: example_extended.json  example_quote.json  example_reply.json  example_retweet.json  example_retweeted_quote.json  example_tweet.json  example_with_media.json  example_with_media_photo.json  example_with_media_video.json  example_with_poll.json
src/: api.rs  api_result.rs  authentication.rs  error.rs  expansions.rs  fields.rs  id.rs  lib.rs  oauth2.rs  query.rs  requests.rs
src/api/: base.rs  compliance.rs  lists.rs  mod.rs  spaces.rs  tweets.rs  users.rs  with_user_ctx.rs
src/authorization/: mod.rs  oauth2.rs
src/data/: compliance_job.rs  deleted.rs  entity.rs  expansions.rs  geo.rs  list.rs  matching_rule.rs  media.rs  metric.rs  mod.rs  place.rs  poll.rs  space.rs  stream_rule.rs  tweet.rs  tweets_count.rs  user.rs  verb.rs  withheld.rs
src/id/: mod.rs  numeric.rs  string.rs
src/meta/: mod.rs  pagination.rs  result_count.rs  sent.rs  stream_rule.rs  timeline_meta.rs  tweets.rs  tweets_counts.rs
src/query/: builder.rs  compliance_job.rs  exclude.rs  expansions.rs  fields.rs  granularity.rs  id.rs  macros.rs  mod.rs  sort_order.rs  space_state.rs  to_query.rs
src/requests/: compliance_job.rs  id_req.rs  list.rs  mod.rs  stream_rule.rs  target_user_id.rs  tweet.rs  tweet_id.rs
src/utils/: json_stream.rs  mod.rs  percent_encoding.rs  serde.rs
tests/: api.rs  api_lists.rs  api_spaces.rs  api_tweets.rs  api_users.rs  api_with_user_ctx.rs  data_serde.rs
tests/common/: mod.rs
